--- a/dgl/linkPrediction.ipynb
+++ b/dgl/linkPrediction.ipynb
@@ -2,7 +2,59 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting dgl==0.4.2Note: you may need to restart the kernel to use updated packages.\n",
+      "  Downloading dgl-0.4.2-cp36-cp36m-win_amd64.whl (2.6 MB)\n",
+      "Requirement already satisfied: numpy>=1.14.0 in c:\\users\\mekhani\\anaconda3\\envs\\torch_env\\lib\\site-packages (from dgl==0.4.2) (1.19.2)\n",
+      "Collecting scipy>=1.1.0\n",
+      "  Downloading scipy-1.5.4-cp36-cp36m-win_amd64.whl (31.2 MB)\n",
+      "Collecting networkx>=2.1\n",
+      "  Downloading networkx-2.5.1-py3-none-any.whl (1.6 MB)\n",
+      "Collecting decorator<5,>=4.3\n",
+      "  Downloading decorator-4.4.2-py2.py3-none-any.whl (9.2 kB)\n",
+      "Installing collected packages: decorator, scipy, networkx, dgl\n",
+      "  Attempting uninstall: decorator\n",
+      "    Found existing installation: decorator 5.1.1\n",
+      "    Uninstalling decorator-5.1.1:\n",
+      "      Successfully uninstalled decorator-5.1.1\n",
+      "Successfully installed decorator-4.4.2 dgl-0.4.2 networkx-2.5.1 scipy-1.5.4\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "pip install dgl==0.4.2"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.4.1\n",
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "import torch\n",
+    "print(torch.__version__)  \n",
+    "print(torch.cuda.is_available())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,10 +67,54 @@
     "\n",
     "# Install the CPU version. If you want to install CUDA version, please\n",
     "# refer to https://www.dgl.ai/pages/start.html.\n",
-    "device = torch.device(\"cpu\")\n",
+    "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
     "import dgl\n",
-    "import dgl.graphbolt as gb\n",
-    "import torch.nn.functional as F\n"
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(tensor([0, 0, 0, 0, 0]), tensor([1, 2, 3, 4, 5]))\n",
+      "tensor([[ 0.6380, -1.2825, -0.5653,  1.6395],\n",
+      "        [ 0.7730, -0.7976, -2.2126,  0.8768],\n",
+      "        [-1.4070, -0.2499,  0.9860,  1.1545],\n",
+      "        [-1.1851, -0.0031,  0.1843,  2.1588],\n",
+      "        [-0.1960, -0.2439, -0.5612,  2.6180]])\n"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "\n",
+    "os.environ[\"DGLBACKEND\"] = \"pytorch\"\n",
+    "import dgl\n",
+    "import numpy as np\n",
+    "import torch\n",
+    "g = dgl.graph(([0, 0, 0, 0, 0], [1, 2, 3, 4, 5]), num_nodes=6)\n",
+    "# Equivalently, PyTorch LongTensors also work.\n",
+    "g = dgl.graph(\n",
+    "    (torch.LongTensor([0, 0, 0, 0, 0]), torch.LongTensor([1, 2, 3, 4, 5])),\n",
+    "    num_nodes=6,\n",
+    ")\n",
+    "\n",
+    "# You can omit the number of nodes argument if you can tell the number of nodes from the edge list alone.\n",
+    "g = dgl.graph(([0, 0, 0, 0, 0], [1, 2, 3, 4, 5]))\n",
+    "print(g.edges())\n",
+    "# Assign a 3-dimensional node feature vector for each node.\n",
+    "g.ndata[\"x\"] = torch.randn(6, 3)\n",
+    "# Assign a 4-dimensional edge feature vector for each edge.\n",
+    "g.edata[\"a\"] = torch.randn(5, 4)\n",
+    "# Assign a 5x4 node feature matrix for each node.  Node and edge features in DGL can be multi-dimensional.\n",
+    "g.ndata[\"y\"] = torch.randn(6, 5, 4)\n",
+    "\n",
+    "print(g.edata[\"a\"])"
    ]
   },
   {
@@ -400,7 +496,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "torch_env",
    "language": "python",
    "name": "python3"
   },
@@ -414,7 +510,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3.6.13"
   }
  },
  "nbformat": 4,
